--- a/Find_Country/src/Components/Country_data/Country.css
+++ b/Find_Country/src/Components/Country_data/Country.css
@@ -1,7 +1,20 @@
 
 .country{
-
     border:2px solid tomato;
     padding: 15px;
     margin: 15px;
+    border-radius: 16px;
+}
+.country img{
+    width: 100%;
+}
+.visited{
+    background-color: green;
+    color: white;
+    font-weight: 600;
+}
+.non_visited{
+    background-color: tomato;
+    color: white;
+    font-weight: 400;
 }
